--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,22 +7,20 @@ services:
     env_file:
       - ./.env
     volumes:
-      - ./postgres-data:/var/lib/postgresql
+      - postgres_data:/var/lib/postgresql/data/
     ports:
       - ${POSTGRES_PORT}:5432
-
   pgadmin:
     image: dpage/pgadmin4
     restart: always
     volumes:
-      - ./pgadmin:/data
+      - pgadmin:/data
     ports:
       - ${PGADMIN_PORT}:80
     depends_on:
       - db
     env_file:
       - ./.env
-  
   parser:
     build: .
     command: bash -c "alembic upgrade head && uvicorn app.main:app --host ${APP_HOST} --reload"
@@ -34,13 +32,11 @@ services:
       - ${APP_PORT}:8000
     depends_on:
       - db
-  
   redis:
     image: redis
     restart: always
     ports:
       - ${REDIS_PORT}:6379
-  
   celery:
     image: parser
     restart: always
@@ -54,7 +50,6 @@ services:
       - db
       - redis
       - parser
-
   celery_beat:
     image: parser
     build: .
@@ -68,7 +63,6 @@ services:
       - db
       - redis
       - celery
-
   dashboard:
     image: parser
     command: celery --broker=redis://redis:6379/0 flower --port=5555 --address=0.0.0.0
@@ -80,3 +74,6 @@ services:
       - parser
       - redis
       - celery
+volumes:
+  postgres_data:
+  pgadmin:
