--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ redis = "^4.5.4"
 pytest = "^7.2.2"
 mypy = "^1.1.1"
 flake8 = "^6.0.0"
+httpx = "^0.23.3"
+sqlalchemy-utils = "^0.40.0"
 
 [tool.mypy]
 plugins = [
