--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pydantic = "^1.10.7"
 celery = "^5.2.7"
 flower = "^1.2.0"
 redis = "^4.5.4"
+pytest-celery = "^0.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
