--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Install mypy, flake8
         run: |
           python -m pip install --upgrade pip
-          pip install mypy flake8
+          pip install poetry
+          poetry install
+          poetry build
       - name: Run flake8
         run: flake8 .
       - name: Run mypy
