--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,8 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry install
-          poetry build
+          poetry export --dev -f requirements.txt | pip install -r /dev/stdin
       - name: Run flake8
         run: flake8 .
       - name: Run mypy
