--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install mypy, flake8
+      - name: Install requirements
         run: |
           python -m pip install --upgrade pip
           pip install poetry
