--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Run mypy
         run: mypy .
       - name: Deploy project
-      - run: |
+        run: |
           mv test_env .env
           docker compose up -d --build
           docker compose run parser pytest .
