--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,17 +18,13 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install requirements
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-          poetry export --dev -f requirements.txt | pip install -r /dev/stdin
-      - name: Run flake8
-        run: flake8 .
-      - name: Run mypy
-        run: mypy .
       - name: Deploy project
         run: |
           mv test_env .env
           docker compose up -d --build
-          docker compose run parser pytest .
+      - name: Run flake8
+        run: docker compose run parser flake8 .
+      - name: Run mypy
+        run: docker compose run parser mypy .
+      - name: Run pytests
+        run: docker compose run parser pytest .
