split github actions add deploy action

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,23 +1,9 @@
 name: Code checks
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
   
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy project
-        run: |
-          mv test_env .env
-          docker compose up -d --build
-      - name: Run flake8
-        run: docker compose run parser flake8 .
-      - name: Run mypy
-        run: docker compose run parser mypy .
-      - name: Run pytests
-        run: docker compose run parser pytest .
+    uses: ./test_code.yml
