--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,19 +4,20 @@ on:
   push:
     branches: [ main ]
 
-build:
-  uses: ./.github/workflows/test_code.yml
+jobs:
+  build:
+    uses: ./.github/workflows/test_code.yml
 
-deploy:
-  runs-on: ubuntu-latest
-  needs: [ build ]
-  steps:
-    - name: Deploy to stage server
-      uses: appleboy/ssh-action@v0.1.10
-      with:
-        host: ${{ secrets.REMOTE_HOST }}
-        username: ${{ secrets.REMOTE_USERNAME }}
-        password: ${{ secrets.REMOTE_PASSWORD }}
-        port: ${{ secrets.REMOTE_PORT }}
-        script: |
-          docker compose up -d --no-deps --build
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [ build ]
+    steps:
+      - name: Deploy to stage server
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USERNAME }}
+          password: ${{ secrets.REMOTE_PASSWORD }}
+          port: ${{ secrets.REMOTE_PORT }}
+          script: |
+            docker compose up -d --no-deps --build
