add test router

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,5 @@ jobs:
           port: ${{ secrets.REMOTE_PORT }}
           script: |
             cd parser
+            git pull
             docker compose up -d --no-deps --build
